<resources>
    <string name="app_name">LightMeUp</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu">menu</string>
    <string name="Hello">TextView</string>
    <string name="Settings">Settings</string>
    <string name="Rate_Us">Rate Us</string>
    <string name="About">About</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="action_favorite">string</string>
    <string name="action_settings">string</string>
    <string name="run_in_background">Run in background?</string>
    <string name="about_us_na_group_of_stoned_pepole_nthat_needed_a_lighter_nwhile_camping_in_the_beach_nthat_s_it_nsomehow_we_wrote_this_app">A group of stoned people\nthat needed a lighter\nwhile camping in the beach.\nThat\'s it.\nSomehow we wrote this app</string>
    <string name="rate_us">Rate Us</string>
    <string name="settings">Settings</string>
    <string name="error">Error</string>
    <string name="credits">Credits</string>
    <string name="about_us">About us</string>
    <string name="contact_us">Contact Us</string>
    <string name="videos_from_youtube_slow_mo_lab_n_icon_of_the_app_www_flaticon_com">Videos from youtube: Slow Mo Lab\nIcon of the app: Flaticon\nBackground image: Allwallpaper</string>
    <string name="light_me_app">Light Me App</string>
    <string name="what_s_your_phone_number">What\'s your phone number?</string>
    <string name="my_phone_number">My phone number</string>
    <string name="what_s_your_phone">What\'s your phone?</string>
    <string name="have_a_light">Have A light? </string>
</resources>
